# EstarGo

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
conf/: conf.ini
docker/: agent.Dockerfile  rsync.conf  sources.list
include/: Config.h  EvalQueue.h  Eval_Def.h  Evaluator.h  GoBoard.h  Gtp.h  Latency.h  MCTSPlayer.h  MCTSTree.h  PolicyValueEvaluatorClient.h  Symmetry.h  Utils.h
include/utils/: Config.h  Executor.h  INIReader.h  Ini.h  Logger.h
lib/pachi/: .Makefile.un~  CMakeLists.txt  board.c
lib/pachi/playout/: moggy.h
lib/pachi/tactics/: 1lib.h
lib/pachi/uct/: tree.h  uct.h
proto/: .proto.ice.un~  Makefile  Proto.ice  README.md  proto.h  proto.ice  protoI.cpp  protoI.h  proto_ice.py
proto/GoKu/: __init__.py
src/: CMakeLists.txt  Config.cpp  Evaluator.cpp  GoBoard.cpp  GoBoard.h  Gtp.cpp  MCTSPlayer.cpp  MCTSTree.cpp  Makefile  PolicyValueEvaluatorClient.cpp  Proto.cpp  gtp.cpp  gtp.h  gtp.h.in  main.cpp
src/utils/: CMakeLists.txt  INIReader.cpp  Ini.cpp  Logger.cpp  Makefile  Utils.cpp
